chat messages feature wip
