# chat/routes/chat_router.go
@@ -33,5 +33,6 @@ func ChatRouter(e *gin.Engine, handler ChatHandlers){
 	// messages
 	// chatGroup.POST("/messages", handlers.CreateChatMessageAPI)
 	// chatGroup.PATCH("/messages", handlers.UpdateChatMessage)
+	chatRouter.GET("/messages", handler.GetChatMessages)
 	chatRouter.GET("/messages/:chatRoomId", handler.GetChatMessageByRoomID)
 }
