# docs/swagger.json
@@ -297,6 +297,43 @@
                 "responses": {}
             }
         },
+        "/v1/chat/messages": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Get chat message",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Chat-Message"
+                ],
+                "summary": "get chat messages",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "user_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "get messages successfully"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
         "/v1/chat/messages/{chat_room_id}": {
             "get": {
                 "security": [
@@ -380,13 +417,11 @@
                 "summary": "GetChatRooms",
                 "parameters": [
                     {
-                        "description": "User login details",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/types.LoginRequest"
-                        }
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "user_id",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {}
